; ModuleID = '/home/carl/AnghaBench/phpredis/extr_redis_array_impl.c_ra_call_distributor.c'
source_filename = "/home/carl/AnghaBench/phpredis/extr_redis_array_impl.c_ra_call_distributor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@E_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"Could not call distributor function\00", align 1
@function_table = common dso_local global i32 0, align 4
@IS_LONG = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ra_call_distributor(%struct.TYPE_3__* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = call i32 @zend_is_callable_ex(i32* %12, i32* null, i32 0, i32* null, i32* null, i32* null)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %18, label %15

15:                                               ; preds = %3
  %16 = load i32, i32* @E_ERROR, align 4
  %17 = call i32 @php_error_docref(i32* null, i32 %16, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %4, align 4
  br label %41

18:                                               ; preds = %3
  %19 = call i32 @ZVAL_NULL(i32* %9)
  %20 = load i8*, i8** %6, align 8
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @ZVAL_STRINGL(i32* %10, i8* %20, i32 %21)
  %23 = load i32, i32* @function_table, align 4
  %24 = call i32 @EG(i32 %23)
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = call i32 @ra_call_user_function(i32 %24, i32* null, i32* %26, i32* %9, i32 1, i32* %10)
  %28 = load i32, i32* %9, align 4
  %29 = call i64 @Z_TYPE(i32 %28)
  %30 = load i64, i64* @IS_LONG, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %35

32:                                               ; preds = %18
  %33 = load i32, i32* %9, align 4
  %34 = call i32 @Z_LVAL(i32 %33)
  br label %36

35:                                               ; preds = %18
  br label %36

36:                                               ; preds = %35, %32
  %37 = phi i32 [ %34, %32 ], [ -1, %35 ]
  store i32 %37, i32* %8, align 4
  %38 = call i32 @zval_dtor(i32* %10)
  %39 = call i32 @zval_dtor(i32* %9)
  %40 = load i32, i32* %8, align 4
  store i32 %40, i32* %4, align 4
  br label %41

41:                                               ; preds = %36, %15
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

declare dso_local i32 @zend_is_callable_ex(i32*, i32*, i32, i32*, i32*, i32*) #1

declare dso_local i32 @php_error_docref(i32*, i32, i8*) #1

declare dso_local i32 @ZVAL_NULL(i32*) #1

declare dso_local i32 @ZVAL_STRINGL(i32*, i8*, i32) #1

declare dso_local i32 @ra_call_user_function(i32, i32*, i32*, i32*, i32, i32*) #1

declare dso_local i32 @EG(i32) #1

declare dso_local i64 @Z_TYPE(i32) #1

declare dso_local i32 @Z_LVAL(i32) #1

declare dso_local i32 @zval_dtor(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
